--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,5 +15,5 @@ add_executable(rectangules_run main.cpp)
 add_executable(maxrectsbin_run MaxRectsBin.cpp)
 
 #linking with the library
-TARGET_LINK_LIBRARIES(rectangules_run rectanglesLoader)
-TARGET_LINK_LIBRARIES(maxrectsbin_run rectanglesLoader)
+TARGET_LINK_LIBRARIES(rectangules_run rectanglesLoader_lib)
+TARGET_LINK_LIBRARIES(maxrectsbin_run rectanglesLoader_lib)
