--- a/RectanglesLoader/CMakeLists.txt
+++ b/RectanglesLoader/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.12)
 project(RectanglesLoader)
 
-add_library(rectanglesLoader
+add_library(rectanglesLoader_lib
         src/RectLoader.cpp
         src/RectLoader.h
         src/Rect.h
@@ -11,5 +11,5 @@ add_library(rectanglesLoader
         src/TerminalPrint.cpp
         src/TerminalPrint.h
         src/IPrint.h
-        src/MaxRectsBinPack.h
-        src/MaxRectsBinPack.cpp)
+        src/RectangleBinPack/MaxRectsBinPack.h
+        src/RectangleBinPack/MaxRectsBinPack.cpp)
