--- a/RectanglesLoaderTests/CMakeLists.txt
+++ b/RectanglesLoaderTests/CMakeLists.txt
@@ -13,7 +13,11 @@ add_subdirectory(${GTEST_LIB})
 
 include_directories(${GTEST_SRC} ${GTEST_INC})
 
-add_executable(run_tests basic_check.cpp RectTest.cpp RectLoaderTest.cpp TerminalPrintTest.cpp RectanglesListTest.cpp)
+add_executable(run_tests basic_check.cpp
+                        RectTest.cpp
+                        RectLoaderTest.cpp
+                        TerminalPrintTest.cpp
+                        RectanglesListTest.cpp)
 
 target_link_libraries(run_tests gtest gtest_main)
-target_link_libraries(run_tests rectanglesLoader)
+target_link_libraries(run_tests rectanglesLoader_lib)
